--- a/Database/liquibase_local.properties
+++ b/Database/liquibase_local.properties
@@ -1,5 +1,5 @@
-driver: com.microsoft.sqlserver.jdbc.SQLServerDriver
+driver: org.postgresql.Driver
 classpath: E:\\Soft\\liquibase\\lib
-url: jdbc:sqlserver://localhost:1433;database=example 
+url: jdbc:postgresql://localhost:5433/example?currentSchema=example
 username: postgres
 password: postgres
