--- a/Database/liquibase_local.properties
+++ b/Database/liquibase_local.properties
@@ -1,5 +1,7 @@
-driver: com.microsoft.sqlserver.jdbc.SQLServerDriver
-classpath: E:\\Soft\\liquibase\\lib\\
-url: jdbc:sqlserver://localhost:1433;database=example 
+driver: org.postgresql.Driver
+classpath: c:\\Program Files\\Liquibase\\lib\\
+url: jdbc:postgresql://localhost/example?currentSchema=example
 username: postgres
 password: postgres
+
+liquibase.hub.mode=off
