--- a/2)45Club/45Club.app/45Club.app/appsettings.json
+++ b/2)45Club/45Club.app/45Club.app/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "myDb": "Host=localhost;Port=5433;Database=example;SearchPath=45club;Username=postgres;Password=postgres;"
+  }
 }
